--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="bg-dark text-light text-center pt-3 pb-3 container-fluid">
           <div class="row">
             <div class="col-12 col-md-6 col-lg-4">
-                <h1>Control De Reos</h1>
+                <h1>Administracion de Reos</h1>
             </div>
             <div class="col col-md col-lg">
                   <img src="img/kisspng-prisoner-free-content-clip-art-prisoners-cliparts-5aa9c1955bbc80.6958455415210745813758.png" width="100" height="120">
